[package]
name = "lease"
version = "0.3.2"
authors = ["Tyler Hawkes <tyler.hawkes@gmail.com>"]
edition = "2018"
publish = ["crates-io"]
description = "Object pool that leases values and automatically returns them with async support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerhawkes/lease"
documentation = "https://docs.rs/lease"
readme = "README.md"
keywords = ["pool", "object", "async", "cache"]
categories = ["data-structures", "asynchronous", "caching", "concurrency", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3", optional = true, default-features = false }
lockfree = "0.5"
parking_lot = { version = "0.12", default-features = false }

[features]
async = ["futures-core"]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[package.metadata.docs.rs]
all-features = true
